--- a/src/less/inner/font/config.json
+++ b/src/less/inner/font/config.json
@@ -1,11 +1,11 @@
 {
   "name": "",
-  "css_prefix_text": "zricon-",
+  "css_prefix_text": "nvicon-",
   "css_use_suffix": false,
   "hinting": true,
   "units_per_em": 1000,
   "ascent": 850,
-  "copyright": "www.jd.com",
+  "copyright": "www.zhangjinglin.cn",
   "glyphs": [
     {
       "uid": "f8aa663c489bcbd6e68ec8147dca841e",
